Add remove tag option to edit_page html

--- a/templates/edit_word.html
+++ b/templates/edit_word.html
@@ -177,6 +177,7 @@
                             <select id="tag_2" name="tag_2">
                                 {% if selected_tags[1] %}
                                     <option value="{{ selected_tags[1].name }}" selected>{{ selected_tags[1].name }}</option>
+                                    <option value="remove" id="tagRemove">Remove This Tag</option>
                                 {% else %}
                                     <option value="" disabled selected>Add a tag</option>
                                 {% endif %}
@@ -197,6 +198,7 @@
                             <select id="tag_3" name="tag_3">
                                 {% if selected_tags[2] %}
                                     <option value="{{ selected_tags[2].name }}" selected>{{ selected_tags[2].name }}</option>
+                                    <option value="remove" id="tagRemove">Remove This Tag</option>
                                 {% else %}
                                     <option value="" disabled selected>Add a tag</option>
                                 {% endif %}
@@ -217,6 +219,7 @@
                             <select id="tag_4" name="tag_4">
                                 {% if selected_tags[3] %}
                                     <option value="{{ selected_tags[3].name }}" selected>{{ selected_tags[3].name }}</option>
+                                    <option value="remove" id="tagRemove">Remove This Tag</option>
                                 {% else %}
                                     <option value="" disabled selected>Add a tag</option>
                                 {% endif %}
@@ -237,6 +240,7 @@
                             <select id="tag_5" name="tag_5">
                                 {% if selected_tags[4] %}
                                     <option value="{{ selected_tags[4].name }}" selected>{{ selected_tags[4].name }}</option>
+                                    <option value="remove" id="tagRemove">Remove This Tag</option>
                                 {% else %}
                                     <option value="" disabled selected>Add a tag</option>
                                 {% endif %}
