--- a/templates/edit_word.html
+++ b/templates/edit_word.html
@@ -155,6 +155,8 @@
                             {% if tag != selected_tags[0] %}
                                 <option value="{{ tag.name }}">{{ tag.name }}</option>
                             {% endif %}
+                        {% else %}
+                            <option value="{{ tag.name }}">{{ tag.name }}</option>
                         {% endif %}
                     {% endfor %}
                 </select>
@@ -187,6 +189,8 @@
                                         {% if tag != selected_tags[1] %}
                                             <option value="{{ tag.name }}">{{ tag.name }}</option>
                                         {% endif %}
+                                    {% else %}
+                                        <option value="{{ tag.name }}">{{ tag.name }}</option>
                                     {% endif %}
                                 {% endfor %}
                             </select>
@@ -208,6 +212,8 @@
                                         {% if tag != selected_tags[2] %}
                                             <option value="{{ tag.name }}">{{ tag.name }}</option>
                                         {% endif %}
+                                    {% else %}
+                                        <option value="{{ tag.name }}">{{ tag.name }}</option>
                                     {% endif %}
                                 {% endfor %}
                             </select>
@@ -229,6 +235,8 @@
                                         {% if tag != selected_tags[3] %}
                                             <option value="{{ tag.name }}">{{ tag.name }}</option>
                                         {% endif %}
+                                    {% else %}
+                                        <option value="{{ tag.name }}">{{ tag.name }}</option>
                                     {% endif %}
                                 {% endfor %}
                             </select>
@@ -250,6 +258,8 @@
                                         {% if tag != selected_tags[4] %}
                                             <option value="{{ tag.name }}">{{ tag.name }}</option>
                                         {% endif %}
+                                    {% else %}
+                                        <option value="{{ tag.name }}">{{ tag.name }}</option>
                                     {% endif %}
                                 {% endfor %}
                             </select>
