--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+/* font-rulings */
+
+/* font-family: 'Hina Mincho', serif;
+font-family: 'Merriweather', serif; */
+
 .home-description p {
     text-align: center;
 }
@@ -15,6 +20,10 @@ main {
 .home-description a {
     color: black;
     text-decoration: underline;
+}
+
+.nav-icon {
+    font-size: 38px!important;
 }
 
 .hero-image img {
