--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The evergrowing list of Limerick lingo, right at your fingertips!">
     <link rel="shortcut icon" type="image/jpg" href="{{ url_for('static', filename='images/favicon/favicon.ico') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Eagle+Lake&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -22,7 +26,7 @@
         <!-- main navbar -->
         <nav>
             <div class="green darken-1 nav-wrapper">
-                <a href="{{ url_for('home_page') }}" class="center brand-logo">Yurt Index</a>
+                <a href="{{ url_for('home_page') }}" class="center eagle-lake brand-logo">Yurt Index</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
                         class="material-icons nav-icon">menu</i></a>
                 <ul class="right hide-on-med-and-down">
