--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                 <a href="{{ url_for('home_page') }}" class="center eagle-lake brand-logo">Yurt Index</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
                         class="material-icons nav-icon">menu</i></a>
-                <ul class="nav-links hide-on-med-and-down">
+                <ul class="hina-mincho nav-links hide-on-med-and-down">
                     <li><a href="{{ url_for('home_page') }}">Home</a></li>
                     <li><a href="{{ url_for('all_words') }}">All Words</a></li>
                     {% if session.user %}
