--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,6 +63,19 @@ nav i.material-icons {
     margin-left: 0;
 }
 
+.sidenav li>a>i, .sidenav li>a>[class^="mdi-"], .sidenav li>a li>a>[class*="mdi-"], .sidenav li>a>i.material-icons {
+    float: none;
+    margin: 0; 
+}
+
+.dropdown-content li>a, .dropdown-content li>span {
+    font-size: 16px!important;
+    color: #26a69a!important;
+    display: block!important;
+    line-height: 22px!important;
+    padding: 14px 16px!important;
+}
+
 .hero-image img {
     width: 100%;
     height: 36vh;
