--- a/templates/base.html
+++ b/templates/base.html
@@ -69,16 +69,27 @@
         </nav>
         <!-- mobile sidenav -->
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="{{ url_for('home_page') }}">Home</a></li>
-            <li><a href="{{ url_for('all_words') }}">All Words</a></li>
-            {% if session.user %}
-               <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li> 
-               <li><a href="{{ url_for('new_word') }}">New Word</a></li>                
-                <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
-            {% else %}
-                <li><a href="{{ url_for('log_in') }}">Log In</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
-            {% endif %}
+            <!-- {% if session.user %}                      
+                        <li><a href="{{ url_for('new_word') }}">New Word</a></li>
+                        {% if session.admin %}
+                            <li><a href="{{ url_for('add_tag', username=session['user']) }}">New Tag</a></li>
+                        {% endif %}
+                        <li><a class="dropdown-trigger" href="#!" data-target="wordsDropdown">
+                            Categories <i class="material-icons">arrow_drop_down</i>
+                        </a></li>
+                        <li><a class="dropdown-trigger" href="#!" data-target="loggedIn">
+                            User
+                            <i id="notLoggedInIcon" class="material-icons">arrow_drop_down</i>
+                        </a></li>
+                {% else %}
+                        <li><a class="dropdown-trigger" href="#!" data-target="wordsDropdown">
+                            Categories <i class="material-icons">arrow_drop_down</i>
+                        </a></li>
+                        <li><a class="dropdown-trigger" href="#!" data-target="notLoggedIn">
+                            User
+                            <i id="notLoggedInIcon" class="material-icons">arrow_drop_down</i>
+                        </a></li>
+            {% endif %} -->
         </ul>
         {% block search %}
         {% endblock %}
