--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -6,7 +6,7 @@
             <div class="input-field search-container white">
                 <i class="material-icons prefix">search</i>
                 <input id="search" type="text" name="search">
-                <label for="search">Enter a word or a tag e.g 'Yurt' or 'Limerick'</label>
+                <label for="search">Find any word...</label>
                 <button type="submit">Search</button>
             </div>
         </form>
