--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,6 +76,22 @@ nav i.material-icons {
     padding: 14px 16px!important;
 }
 
+.search-button {
+    height: 46px;
+    position: absolute;
+    width: 3rem;
+    font-size: 2.2rem;
+    -webkit-transition: color .2s;
+    transition: color .2s;
+    background-color: orange;
+}
+
+@media(max-width: 600px) {
+    .search-container {
+        width: 83%;
+    }
+}
+
 .hero-image img {
     width: 100%;
     height: 36vh;
