Style search bar

--- a/templates/all_words.html
+++ b/templates/all_words.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block search %}
-    <div class="row green darken-1">
+    <div class="row search-div green darken-1">
         <form action="{{ url_for('search') }}" method="post" class="col offset-m2 offset-l3 s12 m8 l6" id="navSearch">
             <div class="input-field search-container white">
                 <input id="search" type="text" name="search">
