--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,12 @@
             {% endif %}
         {% endwith %}
     </section>
+    {% block hero_image %}
+
+    {% endblock %}
+    <section>
+
+    </section>
 
     <main>
         {% block content %}
