--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,10 @@
     font-family: 'Merriweather', serif;
 }
 
+p {
+    font-family: 'Merriweather', serif;
+    font-weight: 100;
+}
 
 
 .home-description p {
@@ -76,6 +80,10 @@ nav i.material-icons {
     padding: 14px 16px !important;
 }
 
+.search-div {
+    margin-bottom: 0;
+}
+
 #search {
     margin: 0!important;
 }
@@ -110,10 +118,20 @@ nav i.material-icons {
 
 .hero-image img {
     width: 100%;
-    height: 36vh;
-    margin-top: 26px;
+    height: 70vh;
+    display: none;
 }
 
+@media(max-width: 992px) {
+    .hero-image img {
+        display: none;
+    }
+}
+
+.main-heading {
+    font-family: 'Hina Mincho', serif;
+    margin-top: 100px;
+}
 
 .alternative-spellings-container {
     opacity: .7;
