--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
     <h3 class="center main-heading"> What is the Yurt Index?</h3>
 
     <div class="row home-description">
-        <div class="col green darken-1 white-text">
+        <div class="col">
             <p>
                 The Yurt Index aims to be a definitive list of Irish slang online. With a particular focus on a lot of
                 the slang local to Limerick, that's been introduced to the Irish mainstream thanks to the work of
@@ -51,7 +51,7 @@
                     </a>                        
                 {% endif %}
                 <div class="card-content word-summary white-text">
-                    <span class="card-title"><strong>{{ words[0].name.capitalize() }}</strong></span>
+                    <span class="card-title">{{ words[0].name.capitalize() }}</span>
                     <p>{{ words[0].meaning }}</p>
                 </div>
                 <div class="card-action">
@@ -68,7 +68,7 @@
                     </a>                        
                 {% endif %}
                 <div class="card-content word-summary white-text">
-                    <span class="card-title"><strong>{{ words[1].name.capitalize() }}</strong></span>
+                    <span class="card-title">{{ words[1].name.capitalize() }}</span>
                     <p>{{ words[1].meaning }}</p>
                 </div>
                 <div class="card-action">
@@ -85,7 +85,7 @@
                     </a>                        
                 {% endif %}
                 <div class="card-content word-summary white-text">
-                    <span class="card-title"><strong>{{ words[2].name.capitalize() }}</strong></span>
+                    <span class="card-title">{{ words[2].name.capitalize() }}</span>
                     <p>{{ words[2].meaning }}</p>
                 </div>
                 <div class="card-action">
@@ -102,7 +102,7 @@
                     </a>                        
                 {% endif %}
                 <div class="card-content word-summary white-text">
-                    <span class="card-title"><strong>{{ words[3].name.capitalize() }}</strong></span>
+                    <span class="card-title">{{ words[3].name.capitalize() }}</span>
                     <p>{{ words[3].meaning }}</p>
                 </div>
                 <div class="card-action">
