Add font awesome script tag

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,6 +149,18 @@ nav i.material-icons {
 
 
 
+/* footer */
+.footer-tag {
+    font-size: 15px;
+}
+
+@media(min-width: 993px) {
+    .footer-links {
+        text-align: right;
+    }
+}
+
+
 /* hero image */
 
 .hero-image img {
