--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7d4a87edd3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
     {% endblock %}
@@ -139,32 +140,40 @@
         {% endblock %}
     </main>
 
-    <!-- <footer class="page-footer">
+    <footer class="green darken-1 page-footer">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
-                        content.</p>
+                    <h4 class="eagle-lake white-text">Yurt Index</h4>
+                    <p class="grey-text hina-mincho footer-tag text-lighten-4">The lengthening list of Limerick lingo.</p>
+                    <p class="grey-text hina-mincho footer-tag text-lighten-4">Made by Michael Walsh</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    <h4 class="white-text eagle-lake footer-link-heading">More from me:</h4>
+                    <ul class="footer-links merriweather">
+                        <li><a class="grey-text text-lighten-3" href="">
+                            My Github 
+                        </a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">
+                            Link 2                            
+                        </a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">
+                            Link 3                            
+                        </a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">
+                            Link 4                            
+                        </a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2014 Copyright Text
+                © Michael Walsh 2021
                 <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
