--- a/templates/base.html
+++ b/templates/base.html
@@ -151,17 +151,17 @@
                 <div class="col l4 offset-l2 s12">
                     <h4 class="white-text eagle-lake footer-link-heading">More from me:</h4>
                     <ul class="footer-links merriweather">
-                        <li><a class="grey-text text-lighten-3" href="">
-                            My Github 
+                        <li><a target="_blank" href="https://github.com/MichaelCWalsh7">
+                            Github <i class="fab fa-github"></i>
                         </a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">
-                            Link 2                            
+                        <li><a target="_blank" href="https://www.linkedin.com/in/michael-c-walsh792/">
+                            LinkedIn <i class="fab fa-linkedin"></i>                        
                         </a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">
-                            Link 3                            
+                        <li><a target="_blank" href="https://michaelcwalsh7.github.io/milestone-project-1/">
+                            My Website <i class="fas fa-briefcase"></i>                            
                         </a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">
-                            Link 4                            
+                        <li><a target="_blank" href="https://michaelcwalsh7.github.io/Milestone-Project-2/">
+                            My Previous Project <i class="fas fa-puzzle-piece"></i>                         
                         </a></li>
                     </ul>
                 </div>
@@ -170,7 +170,7 @@
         <div class="footer-copyright">
             <div class="container">
                 © Michael Walsh 2021
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                <a class="grey-text text-lighten-4 right" href="#">Back to top</a>
             </div>
         </div>
     </footer>
