--- a/templates/all_words.html
+++ b/templates/all_words.html
@@ -4,7 +4,7 @@
         <form action="{{ url_for('search') }}" method="post" class="col offset-m2 offset-l3 s12 m8 l6" id="navSearch">
             <div class="input-field search-container white">
                 <input id="search" type="text" name="search">
-                <label for="search">Find any word...</label>
+                <label for="search">Find a word...</label>
                 <button class="search-button" type="submit">
                     <i class="material-icons suffix">search</i>
                 </button> 
