--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
         <form action="{{ url_for('search') }}" method="post" class="col offset-m2 offset-l3 s12 m8 l6" id="navSearch">
             <div class="input-field search-container white">
                 <input id="search" type="text" name="search">
-                <label for="search">Find any word...</label>
+                <label for="search">Find a word...</label>
                 <button class="search-button" type="submit">
                     <i class="material-icons suffix">search</i>
                 </button>                    
@@ -22,7 +22,7 @@
 
 {% block content %}
     
-    <h3 class="center main-heading"> What is the Yurt Index?</h3>
+    <h3 id="homePageHeading" class="center main-heading"> What is the Yurt Index?</h3>
 
     <div class="row home-description">
         <div class="col">
