--- a/templates/404.html
+++ b/templates/404.html
@@ -6,7 +6,7 @@
     <h3 class="center main-heading">Sorry, this page doesn't exist</h3>
 </div>
 
-<div class="center return-home-button-container">
-    <a class="text-shadow return-home-button" href="{{ url_for('home_page') }}">Back to Yurt Index</a>
+<div class="center home-button-container">
+    <a class="text-shadow return-home-button" href="{{ url_for('all_words') }}">Check out some words</a>
 </div>
 {% endblock %}
