--- a/templates/base.html
+++ b/templates/base.html
@@ -140,6 +140,10 @@
         {% endblock %}
     </main>
 
+    <div class="home-button-container center">
+        <a class="text-shadow return-home-button" href="{{ url_for('home_page') }}">Return to the Home Page</a>
+    </div>
+
     <footer class="green darken-1 page-footer">
         <div class="container">
             <div class="row">
